# CDE

./: .Xresources  .bashrc  .gitmodules  .tmux.conf  .xinitrc  README.md  Xresources  bashrc_additions  install-environment.sh  install-micro.sh  install-packages.sh  install.sh  settings.json  tmux.conf  xinitrc
template/: .gitignore  CMakeLists.txt  Makefile
template/src/: blub.cpp  button.cpp  hello.cpp
template/src/include/: pins.h  servo.h
